spade-tests/src/snapshots/spade_tests__integration__trait_tests__multiple_impls_of_same_trait_same_type_params_is_error.snap
---
source: spade-tests/src/integration.rs
---
trait X<T> {}
impl X<bool> for bool {}
impl X<bool> for bool {}


error: Multiple implementations of X for bool
  ┌─ testinput:3:1
  │
2 │ impl X<bool> for bool {}
  │ ------------------------ Previous impl here
3 │ impl X<bool> for bool {}
  │ ^^^^^^^^^^^^^^^^^^^^^^^^
